jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: filme
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      terminationGracePeriodSeconds: 0
      hostNetwork: true
      containers:
        - name: jellyfin
          resources:
            limits:
              cpu: "10000m"
              memory: "300M"
            requests:
              cpu: "500m"
              memory: "300M"
          image: linuxserver/jellyfin:20200313-ls33
          ports:
            - containerPort: 8096
              protocol: TCP
            - containerPort: 1900
              hostPort: 1900
              protocol: UDP
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: media-volume
              mountPath: /media
            - name: videocard
              mountPath: /dev/dri
          securityContext:
            privileged: true
      volumes:
        - name: config-volume
          hostPath:
            path: /media/hddext4/jellyfin/config
        - name: media-volume
          hostPath:
            path: /media/hddext4/jellyfin/media
        - name: videocard
          hostPath:
            path: /dev/dri
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: tedy-desktop-debian
