jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: tedy
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
