jellyfin/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: filme
spec:
  rules:
    - host: jellyfin.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: jellyfin-service
              servicePort: 8096
